--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,21 @@
   background-position: 50%;
   -webkit-filter: blur(4px);
 }
+#bg2{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: .8;
+  height: 100vh;
+  z-index: 0;
+  background-repeat: no-repeat;
+  background-image: url(../img/hihi.jpg);
+  background-size: cover;
+  background-position: 50%;
+  -webkit-filter: blur(4px);
+}
 .swal2-title, .swal2-content{
   color: azure !important;
 }
@@ -80,3 +95,5 @@ header h4 {
     -webkit-transition: all 0.3s ease-out;
   }
 }
+
+
