--- a/css/spinload.css
+++ b/css/spinload.css
@@ -5,14 +5,14 @@
 	left:0;
 	right:0;
 	bottom:0;
-	background-color:#ef6a8a; /* change if the mask should have another color then white */
-	z-index:9999999; /* makes sure it stays on top */
+	background-color:#ef6a8a; 
+	z-index:9999999; 
 }
 
 .spinner {
 	position:absolute;
-	left:50%; /* centers the loading animation horizontally one the screen */
-	top:50%; /* centers the loading animation vertically one the screen */
+	left:50%; 
+	top:50%; 
 	width: 50px;
 	height: 30px;
 	text-align: center;
@@ -63,7 +63,8 @@
 	-webkit-transform: scaleY(1.0);
 	}
 }
-/* Thêm vào file css/style.css */
+
+/* Đổi màu đỏ cho thông báo lỗi */
 .error-title {
 	color: red !important; /* Đổi màu tiêu đề thành đỏ */
 }
@@ -71,15 +72,16 @@
 .error-content {
 	color: red !important; /* Đổi màu nội dung thành đỏ */
 }
-
+/* Đổi màu xanh cho thông báo con trai */
 .special-title{
-	color: red !important; 
+	color: rgb(0, 85, 255) !important; 
 }
 .special-content
 {
-	color: red !important; 
+	color: rgb(0, 47, 255) !important; 
 }
 
+/* Đổi màu vàng cho thông báo tên lạ */
 .weird-title
 {
 	color: chocolate !important;
